New trigger config, change parameters only once

--- a/cfg/obstacleAvoidance_params.cfg
+++ b/cfg/obstacleAvoidance_params.cfg
@@ -19,9 +19,9 @@ gen.add("obstacle_safety_factor", double_t, 0, "Margin of safety", 1.0, 1.0, 1.5
 gen.add("obstacle_rho", double_t, 0, "Increase for earlier response", 1.0, 1.0, 8.0)
 gen.add("jerky_motion_duration", double_t, 0, "Increase for longer-lasting perturbations", 0.4, 0.0, 1.0)
 gen.add("pause_duration", double_t, 0, "Increase for longer pauses", 0.4, 0.0, 2.0)
-gen.add("trajectory_1", bool_t, 0, "Close and smooth", False)
-gen.add("trajectory_2", bool_t, 0, "Large margin and smooth", False)
-gen.add("trajectory_3", bool_t, 0, "Close and abrupt", False)
+# gen.add("trajectory_1", bool_t, 0, "Close and smooth", False)
+# gen.add("trajectory_2", bool_t, 0, "Large margin and smooth", False)
+# gen.add("trajectory_3", bool_t, 0, "Close and abrupt", False)
 
 
 # Generate files
